telerun-out/0185628/compile-log.txt
/tmp/tmpdvvvvhsb/source.cpp:76:23: error: no matching function for call to '_mm512_set1_ps'
   76 |     __m512 window_x = _mm512_set1_ps(window_x);
      |                       ^~~~~~~~~~~~~~
/usr/lib/llvm-20/lib/clang/20/include/avx512fintrin.h:281:1: note: candidate function not viable: no known conversion from '__m512' (vector of 16 'float' values) to 'float' for 1st argument
  281 | _mm512_set1_ps(float __w)
      | ^              ~~~~~~~~~
/tmp/tmpdvvvvhsb/source.cpp:77:23: error: no matching function for call to '_mm512_set1_ps'
   77 |     __m512 window_y = _mm512_set1_ps(window_y);
      |                       ^~~~~~~~~~~~~~
/usr/lib/llvm-20/lib/clang/20/include/avx512fintrin.h:281:1: note: candidate function not viable: no known conversion from '__m512' (vector of 16 'float' values) to 'float' for 1st argument
  281 | _mm512_set1_ps(float __w)
      | ^              ~~~~~~~~~
/tmp/tmpdvvvvhsb/source.cpp:78:26: error: no matching function for call to '_mm512_set1_ps'
   78 |     __m512 window_zoom = _mm512_set1_ps(window_zoom);
      |                          ^~~~~~~~~~~~~~
/usr/lib/llvm-20/lib/clang/20/include/avx512fintrin.h:281:1: note: candidate function not viable: no known conversion from '__m512' (vector of 16 'float' values) to 'float' for 1st argument
  281 | _mm512_set1_ps(float __w)
      | ^              ~~~~~~~~~
3 errors generated.
